--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="col-md-6">
                 <div class="caja">
                     <label for=""> ingrese numero</label> <br>
-                    <input type="text" id="numEntero" placeholder="0" style="margin:10px 0px"> <br>
+                    <input type="text" id="n" placeholder="0" style="margin:10px 0px"> <br>
                     <button onclick="calcular()">calcular</button> 
                 </div>
             </div>
